// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HoverCard renders ExpandingCard correctly 1`] = `
<span
  class="ms-layer"
>
  <div
    class=
        ms-Fabric
        ms-Layer-content
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          visibility: visible;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
  >
    <div
      class=
          ms-Callout-container
          {
            position: relative;
          }
    >
      <div
        class=
            ms-Callout
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              border-radius: 2px;
              box-shadow: 0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108);
              box-sizing: border-box;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              outline: transparent;
              position: absolute;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              border-color: WindowText;
              border-style: solid;
              border-width: 1px;
            }
            &::-moz-focus-inner {
              border: 0px;
            }
        style="opacity: 0; filter: opacity(0); pointer-events: none;"
        tabindex="-1"
      >
        <div
          class=
              ms-Callout-main
              {
                background-color: #ffffff;
                border-radius: 2px;
                overflow-x: hidden;
                overflow-y: hidden;
                position: relative;
                width: 100%;
              }
          style="overflow-y: hidden; outline: none; max-height: 100%;"
        >
          <div
            data-tabster="{\\"uncontrolled\\": {\\"completely\\": true}}"
          >
            <div
              aria-hidden="true"
              data-is-focus-trap-zone-bumper="true"
              data-is-visible="true"
              style="pointer-events: none; position: fixed;"
              tabindex="0"
            />
            <div>
              <div>
                <div>
                  TEST
                </div>
              </div>
              <div>
                <div>
                  <div>
                    TEST
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-hidden="true"
              data-is-focus-trap-zone-bumper="true"
              data-is-visible="true"
              style="pointer-events: none; position: fixed;"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`HoverCard renders PlainCard correctly 1`] = `
<span
  class="ms-layer"
>
  <div
    class=
        ms-Fabric
        ms-Layer-content
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          visibility: visible;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
  >
    <div
      class=
          ms-Callout-container
          {
            position: relative;
          }
    >
      <div
        class=
            ms-Callout
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              border-radius: 2px;
              box-shadow: 0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108);
              box-sizing: border-box;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              outline: transparent;
              position: absolute;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              border-color: WindowText;
              border-style: solid;
              border-width: 1px;
            }
            &::-moz-focus-inner {
              border: 0px;
            }
        style="opacity: 0; filter: opacity(0); pointer-events: none;"
        tabindex="-1"
      >
        <div
          class=
              ms-Callout-main
              {
                background-color: #ffffff;
                border-radius: 2px;
                overflow-x: hidden;
                overflow-y: auto;
                position: relative;
                width: 100%;
              }
          style="outline: none; max-height: 100%;"
        >
          <div
            data-tabster="{\\"uncontrolled\\": {\\"completely\\": true}}"
          >
            <div
              aria-hidden="true"
              data-is-focus-trap-zone-bumper="true"
              data-is-visible="true"
              style="pointer-events: none; position: fixed;"
              tabindex="0"
            />
            <div>
              <div
                style="width: 200px; height: 500px;"
              >
                TEST
              </div>
            </div>
            <div
              aria-hidden="true"
              data-is-focus-trap-zone-bumper="true"
              data-is-visible="true"
              style="pointer-events: none; position: fixed;"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`HoverCard renders target wrapped by HoverCard correctly 1`] = `
<div
  data-is-focusable="true"
>
  Content
</div>
`;
